add: Intersection observer

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap" rel="stylesheet">
+		<!--ADDED to start tailwind intersect observer-->
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
