--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html lang="en" class="text-black bg-white dark:text-white dark:bg-[#111010]">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  %sveltekit.head%
-</head>
-<body data-sveltekit-preload-data="hover"
-      class="antialiased max-w-2xl mb-40 flex flex-col md:flex-row mx-4 mt-8 lg:mx-auto">
-<main class="flex-auto min-w-0 mt-6 flex flex-col  md:px-0">
-  <div style="display: contents">%sveltekit.body%</div>
-</main>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %sveltekit.head%
+  </head>
+  <body
+    data-sveltekit-preload-data="hover"
+    class="antialiased max-w-2xl mb-40 flex flex-col md:flex-row mx-4 mt-8 lg:mx-auto"
+  >
+    <main class="flex-auto min-w-0 mt-6 flex flex-col md:px-0">
+      <div style="display: contents">%sveltekit.body%</div>
+    </main>
+  </body>
 </html>
